--- a/src/app/client/sign-up/sign-up.component.scss
+++ b/src/app/client/sign-up/sign-up.component.scss
@@ -12,8 +12,7 @@
     .signup__form {
         font-size: calc(1rem + 0.4vw);
         .signup__form--input {
-            input,
-            select {
+            input {
                 padding: 1rem 1.5rem;
                 font-size: 1.8rem;
                 color: black;
