--- a/src/app/client/sign-up/sign-up.component.html
+++ b/src/app/client/sign-up/sign-up.component.html
@@ -1,25 +1,56 @@
 <div class="signup container" id="signup">
     <h1 class="w-50 mx-auto">Đăng ký</h1>
-    <form class="signup__form">
+    <form #formDangKy="ngForm" (ngSubmit)="DangKy(formDangKy)" class="signup__form">
         <div class="form-group signup__form--input">
             <label>Tài khoản: </label>
-            <input type="text" class="form-control" />
+            <input name="taiKhoan" ngModel type="text" class="form-control" #taiKhoan="ngModel" required />
+            <div *ngIf="taiKhoan.errors && (taiKhoan.touched || taiKhoan.dirty)">
+                <div class="alert alert-danger" *ngIf="taiKhoan.errors.required">Tài khoản không được để trống
+                </div>
+            </div>
+
         </div>
         <div class="form-group signup__form--input">
             <label>Mật khẩu: </label>
-            <input type="password" class="form-control" />
+            <input name="matKhau" ngModel type="password" class="form-control" #matKhau="ngModel" required minlength="6"
+                maxlength="20" />
+            <div *ngIf="matKhau.errors && (matKhau.touched || matKhau.dirty)">
+                <div *ngIf="matKhau.errors.required" class="alert alert-danger">Mật khẩu không được để trống</div>
+                <div *ngIf="matKhau.errors.minlength || matKhau.errors.maxlength" class="alert alert-danger">Mật khẩu
+                    phải từ 6 đến 20 ký tự</div>
+            </div>
         </div>
         <div class="form-group signup__form--input">
             <label>Họ tên: </label>
-            <input type="text" class="form-control" />
+            <input name="hoTen" ngModel type="text" class="form-control" [pattern]='"^[a-zA-Z_ÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚĂĐĨŨƠàáâãèéêìíòóôõùúăđĩũơƯĂẠẢẤẦẨẪẬẮẰẲẴẶ" +
+            "ẸẺẼỀỀỂưăạảấầẩẫậắằẳẵặẹẻẽềềểỄỆỈỊỌỎỐỒỔỖỘỚỜỞỠỢỤỦỨỪễệỉịọỏốồổỗộớờởỡợ" +
+            "ụủứừỬỮỰỲỴÝỶỸửữựỳỵỷỹ\\s]+$"' #hoTen="ngModel" />
+            <div *ngIf="hoTen.errors && (hoTen.touched || hoTen.dirty)">
+                <div *ngIf="hoTen.errors.pattern" class="alert alert-danger">Vui lòng nhập họ tên là chữ</div>
+            </div>
         </div>
         <div class="form-group signup__form--input">
             <label>Email: </label>
-            <input type="text" class="form-control" />
+            <input name="email" ngModel type="text" class="form-control" #email="ngModel" required [pattern]='"^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@"
+            + "[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$"' />
+            <div *ngIf="email.errors && (email.touched || email.dirty)">
+                <div *ngIf="email.errors.required" class="alert alert-danger">Email không được bỏ trống!</div>
+                <div *ngIf="email.errors.pattern" class="alert alert-danger">Email không hợp lệ!</div>
+            </div>
+        </div>
+        <div class="form-group signup__form--input">
+            <label>Số điện thoại: </label>
+            <input name="soDT" ngModel type="text" class="form-control" #soDT="ngModel" required />
+            <div *ngIf="soDT.errors && ( soDT.touched || soDT.dirty)">
+                <div *ngIf="soDT.errors.required" class="alert alert-danger">
+
+                    Số điện thoại không được bỏ trống
+                </div>
+            </div>
         </div>
         <div class="form-group signup__form--input">
             <label>Mã nhóm: </label>
-            <select class="form-control" value="">
+            <select name="maNhom" ngModel class="form-control" #maNhom="ngModel" required>
                 <option>GP01</option>
                 <option>GP02</option>
                 <option>GP03</option>
@@ -31,9 +62,12 @@
                 <option>GP09</option>
                 <option>GP10</option>
             </select>
+            <div *ngIf="maNhom.errors">
+                <div *ngIf="maNhom.errors.required" class="alert alert-danger">Mã nhóm không được để trống</div>
+            </div>
         </div>
         <div class="text-center signup__form--button">
-            <button class="btn solid">Đăng ký</button>
+            <button class="btn solid" [disabled]="formDangKy.invalid">Đăng ký</button>
         </div>
     </form>
 </div>
