modified dashboard and add all users component

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,2 +1,27 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<section class="admin">
+    <div class="dashboard container-fluid">
+
+        <div class="dashboard__header row">
+            <div class="dashboard__header--logo col-2">
+                <p>Nhan vi van</p>
+            </div>
+            <div class="dashboard__header--info col-10">
+                content go here!
+            </div>
+        </div>
+        <div class="dashboard__body row">
+            <div class="dashboard__body--menu col-2">
+                <ul>
+                    <li routerLink="/courses">Quản lý khóa học</li>
+                    <li routerLink="/admin/users">Quản lý người dùng</li>
+                </ul>
+            </div>
+            <div class="dashboard__body--contents col-10">
+                <!-- <app-users></app-users> -->
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+
+    </div>
+</section>
