--- a/src/app/client/header/header.component.html
+++ b/src/app/client/header/header.component.html
@@ -36,8 +36,10 @@
             </div>
 
             <div class="log-sign">
-                <a routerLink="/log-in" class="btn transparent">Đăng Nhập</a>
-                <a routerLink="/sign-up" class="btn solid">Đăng Ký</a>
+                <a *ngIf="!courseServices.daDangNhap()" routerLink="/log-in" class="btn transparent">Đăng Nhập</a>
+                <a *ngIf="!courseServices.daDangNhap()" routerLink="/sign-up" class="btn solid">Đăng Ký</a>
+                <a *ngIf="courseServices.daDangNhap()" (click)="courseServices.dangXuat()" routerLink="/sign-up"
+                    class="btn solid">Đăng xuất</a>
             </div>
         </div>
 
