add user-filer pipe to admin pages

--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -10,19 +10,54 @@
                 text-transform: uppercase;
                 font-size: 3rem;
                 font-weight: 700;
-                border: 1px solid red;
+                // border: 1px solid red;
                 p {
                     transform: rotate(-10deg);
                 }
             }
             .dashboard__header--info {
                 background-color: blue;
-                border: 1px solid red;
+                .input {
+                    .form-control {
+                        padding: 1rem;
+                        border: none;
+                        border-radius: 0;
+                        font-size: 2rem;
+                        &::placeholder {
+                            color: #a1a7b3;
+                            font-size: 2rem;
+                            font-weight: normal;
+                        }
+                        &:focus {
+                            box-shadow: none;
+                        }
+                    }
+                    .input-group-append {
+                        width: 50px;
+                        font-size: 2rem;
+                        .input-group-text {
+                            background-color: white;
+                            color: #ec5252;
+                            border: none;
+                            padding: 2rem;
+                            i.fa-search {
+                                font-size: 1.5rem;
+                            }
+                        }
+                        &:hover {
+                            .input-group-text {
+                                background-color: #ec5252;
+                                color: white;
+                                cursor: pointer;
+                            }
+                        }
+                    }
+                }
             }
         }
         .dashboard__body {
             .dashboard__body--menu {
-                border: 1px solid red;
+                // border: 1px solid red;
                 color: white;
                 li {
                     cursor: pointer;
@@ -30,7 +65,7 @@
                 }
             }
             .dashboard__body--contents {
-                border: 1px solid red;
+                // border: 1px solid red;
             }
         }
     }
