--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,7 +7,19 @@
                 <p>Nhan vi van</p>
             </div>
             <div class="dashboard__header--info col-10">
-                content go here!
+                <div class="input">
+                    <form>
+                        <div class="input-group">
+                            <input type="search" placeholder="Search" (keyup)="onSearch($any($event.target).value)" />
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">
+                                    <!-- <i class="fab fa-search"></i> -->
+                                    <i class="fa fa-search"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="dashboard__body row">
