--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -29,7 +29,7 @@
         </span>
         <span class="example-spacer"></span>
         <span>
-            <a routerLink="/admin/dashboard">Dashboard</a>
+            <a>Dashboard</a>
         </span>
         <span class="example-spacer"></span>
         <button mat-icon-button [matMenuTriggerFor]="menu" class="user__icon">
