--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,6 +1,6 @@
 <h1 style="text-align: center;">All users</h1>
 <div *ngIf="dataSource">
-    <mat-table [dataSource]="dataSource.items">
+    <mat-table [dataSource]="dataSource.items | userFilter: inputSearch">
         <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
         <mat-row *matRowDef="let row; columns: columnsToDisplay"></mat-row>
 
@@ -27,10 +27,15 @@
         </ng-container>
         <ng-container matColumnDef="action">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Thao tác</mat-header-cell>
-            <mat-cell *matCellDef="let row"> </mat-cell>
+            <mat-cell *matCellDef="let row">
+                <button class="mr-3">Chi tiet</button>
+                <button class="mr-3">Chinh sua</button>
+                <button class="mr-3">Xoa</button>
+            </mat-cell>
         </ng-container>
     </mat-table>
     <mat-paginator [length]="dataSource.totalCount" [pageSize]="dataSource.count"
-        [pageSizeOptions]="[5, 10, 20, 30, 100]" (page)="pageEvent = $event; onPaginateChange($event)">
+        [pageSizeOptions]="[5, 10, 20, 30, 100]" (page)="pageEvent = $event; onPaginateChange($event)"
+        showFirstLastButtons>
     </mat-paginator>
 </div>
