add userProfile detail

--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -28,7 +28,8 @@
         <ng-container matColumnDef="action">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Thao tác</mat-header-cell>
             <mat-cell *matCellDef="let row">
-                <button class="mr-3" (click)="openDialog()">Chi tiet</button>
+                <button class="mr-3" (click)="getUserInfo(this.row.taiKhoan)">Chi tiet</button>
+                <!-- <button class="mr-3" (click)="getUserInfo(this.row.taiKhoan)">Chi tiet</button> -->
                 <button class="mr-3">Chinh sua</button>
                 <button class="mr-3" (click)="deleteUser(this.row.taiKhoan)">Xoa</button>
             </mat-cell>
