--- a/src/app/admin/user-profile/user-profile.component.html
+++ b/src/app/admin/user-profile/user-profile.component.html
@@ -1,1 +1,54 @@
-<p>user-profile works!</p>
+<h3 style="text-align: center; justify-content: center; font-size: 35px; font-weight: 500; color: white;"
+    class="dflex pt-5">
+    Thông tin người dùng</h3>
+<div *ngIf="user" class="userProfile">
+    <mat-card class="card">
+        <mat-card-header>
+            <div mat-card-avatar>
+                <mat-icon>account_circle</mat-icon>
+            </div>
+            <mat-card-title>{{user.hoTen}}</mat-card-title>
+            <mat-card-subtitle>{{user.email}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content class="mt-3">
+            <p><strong> Tài khoản</strong> : {{user.taiKhoan}}</p>
+            <p> <strong>Vai trò</strong> : {{user.maLoaiNguoiDung === 'HV' ? 'Học viên' : 'Giáo viên'}}</p>
+            <p> <strong>Số điện thoại</strong> : {{user.soDT}}</p>
+            <p> <strong>Nhóm</strong> : {{user.maNhom}}</p>
+        </mat-card-content>
+        <mat-divider></mat-divider>
+        <h3 style="color: black; font-size: 25px; font-weight: 500; justify-content: center; text-align: center;"
+            class="dflex">Các
+            khóa học đã ghi
+            danh</h3>
+        <div *ngIf="user.chiTietKhoaHocGhiDanh.length === 0 || undefined" style="font-size: 18px; color: red;">Chưa ghi
+            danh khóa học nào !</div>
+        <div *ngIf="user.chiTietKhoaHocGhiDanh.length >= 1">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef> No. </th>
+                    <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="tenKhoaHoc">
+                    <th mat-header-cell *matHeaderCellDef> Tên khóa học </th>
+                    <td mat-cell *matCellDef="let element"> {{element.tenKhoaHoc}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="maKhoaHoc">
+                    <th mat-header-cell *matHeaderCellDef> Mã khóa học </th>
+                    <td mat-cell *matCellDef="let element"> {{element.maKhoaHoc}} </td>
+                </ng-container>
+
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+        </div>
+    </mat-card>
+</div>
