--- a/src/app/admin/users/users.component.scss
+++ b/src/app/admin/users/users.component.scss
@@ -1,4 +1,26 @@
-:host {
+.users {
     color: red;
     font-size: 50px;
+    h2 {
+        font-size: 2rem;
+        margin-top: 1.5rem;
+    }
+    mat-table {
+        width: 100%;
+        .mat-column-action {
+            word-wrap: break-word !important;
+            white-space: unset !important;
+            flex: 0 0 25% !important;
+            width: 25% !important;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+
+            word-break: break-word;
+
+            -ms-hyphens: auto;
+            -moz-hyphens: auto;
+            -webkit-hyphens: auto;
+            hyphens: auto;
+        }
+    }
 }
