--- a/src/app/admin/ghi-danh/ghi-danh.component.html
+++ b/src/app/admin/ghi-danh/ghi-danh.component.html
@@ -1,1 +1,8 @@
-<p>ghi-danh works!</p>
+<h2 mat-dialog-title>Ghi Danh</h2>
+<mat-dialog-content>
+    Dialog content go here!
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>OK</button>
+</mat-dialog-actions>
